--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    hello,world
     <script src="src/main.js"></script>
+    <script src="src/http.js"></script>
+    <script src="src/prototype.js"></script>
+ 
 </body>
 </html>
