complite live、on, add module.js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 		console.log('live clicked')	
 	})
 
+	$(document).ready(function(){
+		
+		console.log('dom loaded')	
+	})
+	
+	/*
 	setTimeout(function() {
 		
 		var body = document.getElementsByTagName('body')[0]
@@ -37,7 +43,18 @@
 		body.appendChild(node)
 	
 	}, 1000)
+	*/	
 
+	/*	
+	window.addEventListener('DOMContentLoaded', function() {
+
+		console.log('loaded')	
+	
+	}, false)
+
+	$(document).ready()
+
+	$(function(){})()
     //var n = $('#test').remove()
 
     /*$.route
