update css module

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <script src="dist/fishbone.js"></script>
     <script>
 
-        var nodes = $('#test')
+        var obj = $('#test')
 
-        var height = nodes.css('height')
-
-        console.log(height)
-
+        obj.css('width', '-40')
+        
     </script>
 </body>
 </html>
