update css module

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
 
         var obj = $('#test')
 
-        obj.css('width', '-40')
-        
+        // 对css模块的测试
+        obj.css('background', 'red')
+            .css('height', '+40px')
+            .css('width', '-200px')
+            .css('position', 'absolute')
+            .css('left', '0px')
+            .css('top', '0px')
+            .css('left', '+20px')
+            .css('top', '+100px')
+
     </script>
 </body>
 </html>
