update css module

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         var obj = $('#test')
 
         // 对css模块的测试
-        obj.css('background', 'red')
+        obj.css('background-color', 'red')
             .css('height', '+40px')
             .css('width', '-200px')
             .css('position', 'absolute')
