add attr module

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             .css('left', '+20px')
             .css('top', '+100px')
 
+        var id = obj.attr('id')
+        
+        obj.attr('data-id', 'test22')
+
     </script>
 </body>
 </html>
