start to compatible IE 8

--- a/src/bak/index.html
+++ b/src/bak/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
+    <meta charset='UTF-8'>
     <title>框架测试</title>
 </head>
 <body>
-    <div id="test">hello,world</div>
+    <div id='test'>hello,world</div>
 
-    <div class="t">t</div>
-    <div class="t">t</div>
+    <div class='t'>t</div>
+    <div class='t'>t</div>
     
     <dropdown></dropdown>
 
-    <script src="dist/fishbone.js"></script>
+    <script src='dist/fishbone.js'></script>
     <script>
 
     // 创建一个模块
@@ -24,7 +24,7 @@
         // 定义模板，初始化模板
         module.view = {
 
-            html: '<div class="dropdown"><ul>fs-replace</ul></div>',
+            html: '<div class='dropdown'><ul>fs-replace</ul></div>',
             init: function(node) {
 
                 // TODO: 增加格式校验
