fix route bugs: css and js is optional now

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         .provider()
         .when(['', '/', '/index'], {
 
-            css: ['/css/index.css'],
-            js: ['/js/index.js'],
+            //css: ['/css/index.css'],
+            //js: ['/js/index.js'],
             template: '/views/index.html',
             title: 'fishbone'
         })
