--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     var route = $.route
         .provider()
         .when(['/list'], {
-            template: '/views/index.html',
+            template: '/load.html',
             title: 'fishbone'
         })
         .otherwise('/')
