reconsitution, version number step to 2

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     
     <script>
 
-    //var a = $('#fs-view')
+    // bug
+    //var a = $('a').append(div).css('height', '200px')
+
+    
 
     //a.addClass('a1').addClass('abcd').addClass('a2').removeClass('abcd')
-
-    console.log(a)
 
 
 
