fix bugs: $.fn.init -> id selector case

--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 
     //a.addClass('a1').addClass('abcd').addClass('a2').removeClass('abcd')
 
-
-
-    // var route = $.route
-    //     .provider()
-    //     .when(['/list'], {
-    //         template: '/load.html',
-    //         title: 'fishbone',
-    //         js: ['/test.js']
-    //     })
-    //     .otherwise('/')
+    var route = $.route
+        .provider()
+        .when(['/list'], {
+            template: '/load.html',
+            title: 'fishbone',
+            js: ['/test.js']
+        })
+        .otherwise('/')
 
     </script>
     
