update node module: add offset

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta id="viewport" name='viewport' content='initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no'>
     <title>首页 - sunken.me</title>
 
     <style>
@@ -34,10 +33,32 @@
     </div>
 
     <script src="dist/fishbone.js"></script>
-    <script src="index.js"></script>
+    <!--<script src="index.js"></script>-->
+
+
 
     <!--<script src="dist/jquery-2.1.0.min.js"></script>-->
 
 </body>
+
+<script>
+    
+    var width = $('#fs-view').offset()
+
+    //console.log(width)
+
+    
+    // $.route.provider()
+    //     .when(['/', '', '/index'], {
+    //         template: 'load.html',
+    //         js: 'test.js'
+    //     })
+    //     .otherwise('/')
+    //     .scan()
+
+
+
+
+</script>
 
 </html>
