update module attr: add hasclass

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div id="drag"></div>
 
-    <div id="fs-view">
+    <div id="fs-view" class="a b">
         <a href=""></a>
         <span>111</span>
         <span>222</span>
@@ -54,6 +54,8 @@
         console.log(e.target.getAttribute('id'))
 
     })
+
+    console.log($('#fs-view').hasClass('a'))
 
     //var width = $('#fs-view').offset()
 
