add some demos, update event module: fix ie 8 removeEvent, but not tested

--- a/test/scrollbar.html
+++ b/test/scrollbar.html
@@ -60,10 +60,11 @@
 </head>
 <body>
     
+    <div style="height:100px;background:red;"></div>
     <div id="test">
         <img src="image/2013-12-21 09.57.41.jpg" alt="" />
     </div>
-    <script src="dist/fishbone.js"></script>
+    <script src="../dist/fishbone.js"></script>
     <!--<script src="index.js"></script>-->
     <!--<script src="dist/jquery-2.1.0.min.js"></script>-->
       <!-- <div class="content">
@@ -209,6 +210,7 @@
 
         return init
     })()
+
 
     var s = scrollBar($('#test').first())
 
