--- a/test/animate.html
+++ b/test/animate.html
@@ -44,7 +44,7 @@
         </ul>
 
     </div>
-    <script src="dist/fishbone.js"></script>
+    <script src="../dist/fishbone.js"></script>
 
 </body>
 </html>
