--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
 <script>
 
 // ready
-$(document).ready(function() {
+$.ajax({
+    url: 'http://www.sunken.me/user',
+    type: 'post',
+    param: {
+        username: 'sunken',
+        password: '123456'
+    },
+    success: function(data) {
 
-    var test = $('#test')
-    console.log(test.position())
-    console.log(test.offset())
+        console.log(data)
+    }
 })
 
     
