--- a/test/component 2 - react.html
+++ b/test/component 2 - react.html
@@ -17,7 +17,7 @@
     <dropdown data-sarial="4"></dropdown>
 
 
-    <script src="fishbone.js"></script>
+    <script src="../dist/fishbone.js"></script>
 </body>
 </html>
 
